Changelog
=========

5.3-dev - (unreleased)
----------------------

5.2 - (2012-11-22)
------------------
* Feature: added subscriber to update relations once a relation contenttype 
  has been renamed
  [ichimdav #9547]
* Feature: added warning of broken relation when viewing the portal_relations,
  relations and content types pages and continue displaying graph without
  those broken relations
  [ichimdav #9547]

5.1 - (2012-11-09)
------------------
* Change: better Zope logging when listing relations that don't
  comply portal_relations schema
  [ghicaale refs #6773]
* Change: pass context to eeareferencebrowser-popup-selecteditem.html
  so that eea.daviz knows how to get the context of the field
  [tiberich refs #9571]
* Change: added tests and documentation for listing relations that don't
  comply portal_relations schema
  [ghicaale refs #6773]

5.0 - (2012-10-08)
------------------
* Change: use IVideo interface when checking for videos
  [ichimdav #5480]
* Feature: Added a listing of all relations that don't comply portal_relations schema
  [ghicaale refs #3212]
* Bug fix: Fix doc tests
  [voineali]

4.8 - (2012-08-27)
------------------
* Bug fix: correctly set css class for related links to avoid floating issues
  [ichimdav #5455]
* Bug fix: show fancybox popup on video click and display view page instead
  of downloading file
  [ichimdav #5403]
* Feature: Trigger event when updating widget is done
  [szabozo0 refs #5138]

4.7 - (2012-07-13)
------------------
* Bug fix: fixed description error for Sparql related items
  [ichimdav #4705]
* Bug fix: Fixed i18n missing tags and i18n:domain in .pt files
  [prospchr refs #5162]

4.6 - (2012-06-12)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.relations
* Upgrade step: (optional) For each "Plone > portal_relations >
  <Content-Type>" enable 'faceted search' within Actions menu
  [voineali refs #5218]